# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python.yml
page_loader/: __init__.py  cli.py  loader.py  logger.py  page_loader.py  parser.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  plugins.py  test_cli.py  test_loader.py  test_package.py  test_page_loader.py  test_parser.py
tests/fixtures/: hexlet-courses.html  ru-hexlet-io-courses.html
